--- a/PaginaDeProductos/PaginaDeProductos/PaginaDeProductos.csproj
+++ b/PaginaDeProductos/PaginaDeProductos/PaginaDeProductos.csproj
@@ -180,6 +180,12 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibreriaDeClases\LibreriaDeClases.csproj">
+      <Project>{91bc223f-4a33-416a-85e8-06fc8f2261b0}</Project>
+      <Name>LibreriaDeClases</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
