--- a/Proyecto1/LibreriaDeClases/LibreriaDeClases.csproj
+++ b/Proyecto1/LibreriaDeClases/LibreriaDeClases.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.2.0.35\lib\net461\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -43,21 +46,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDeDatos.cs" />
-    <Compile Include="Categoria.cs" />
-    <Compile Include="Class1.cs" />
-    <Compile Include="Imagenes.cs" />
-    <Compile Include="IMetodosDeCrud.cs" />
-    <Compile Include="IOpcionesImagenes.cs" />
-    <Compile Include="IOpcionesSuplidores.cs" />
+    <Compile Include="Models\Categoria.cs" />
+    <Compile Include="Models\Imagenes.cs" />
+    <Compile Include="Interfases\IMetodosDeCrud.cs" />
+    <Compile Include="Interfases\IOpcionesImagenes.cs" />
+    <Compile Include="Interfases\IOpcionesSuplidores.cs" />
     <Compile Include="MetodosDeCrud.cs" />
     <Compile Include="OpcionesImagenes.cs" />
     <Compile Include="OpcionesSuplidores.cs" />
-    <Compile Include="Producto.cs" />
-    <Compile Include="ProductoCategoria.cs" />
+    <Compile Include="Models\Producto.cs" />
+    <Compile Include="Models\ProductoCategoria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Suplidor.cs" />
+    <Compile Include="Models\Suplidor.cs" />
     <Compile Include="SuplidoresSeleccionados.cs" />
-    <Compile Include="VMProductoCategoria.cs" />
+    <Compile Include="Models\VMProductoCategoria.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
